--- a/projects_2016/P2015094/Παραδοτέο 2/παραδοτεο2.md
+++ b/projects_2016/P2015094/Παραδοτέο 2/παραδοτεο2.md
@@ -50,3 +50,5 @@
 
 ##Σενάριο:
 Η Tera η εξωγήινος αποφάσισε να κάνει μια βόλτα στο διάστημα, όμως κάτι πήγε στραβά και χάθηκε. Για να γυρίσει πίσω στον πλανήτη της πρέπει να επιλέξει με το διαστημόπλοιό της  το αστέρι με την σωστή απάντηση στις πράξεις που της εμφανίζονται στην οθόνη. Αν ο παίκτης δεν επιλέξει την σωστή απάντηση η Tera δεν μπορεί να συνεχίσει το ταξίδι επιστροφής και μένει στάσιμη στον πλανήτη στον οποίο βρίσκεται. Ο παίκτης  έχει τη δυνατότητα να ξανααπαντήσει στην ερώτηση χωρίς συνέπειες. Για την επιλογή των απαντήσεων χρησιμοποιούνται τα up arrow και down arrow.
+
+##online Demo: https://scratch.mit.edu/projects/129770617/
